css/screen.css
/* @override http://firedpot.github.com/css/screen.css */

html, body {
	background-color: #7c7c7c;
	margin: 0;
	padding: 0;
}

#site {
	width: 665px;
	margin: auto;
}

#site, h1, h2 {
	font-size: 1em;
	line-height: 1.2;
}

#banner, #page {
	margin-top: 5%;
}

.english a, #home.english, #copyright.english {
	color: #75c4cc;
}

.italian a, #home.italian, #copyright.italian {
	color: #bda17a;
}

#home img {
	padding-right: 5px;
}

#insight img {
	padding-right: 1px;
}

#home p {
	text-align: center;
}

#content {
	color: black;
	width: 505px;
	float: right;
	margin-bottom: 5%;
}

#name {
	padding-left: 60px;
}

#menu {
	width: 150px;
	float: left;
	padding-left: 10px;
	font-size: 1.3em;
	line-height: 1.4;
}

#menu a {
	display: block;
	letter-spacing: 0.05em;
}

#menu a:hover {
	text-decoration: underline;
}

#copyright {
	font-size: 0.5em;
	line-height: 0.5em;
	margin-top: 4em;
}

h1 {
	border-bottom: thin solid silver;
	padding-bottom: 0.1em;
	margin-bottom: 0.4em;
}

#cv td:first-child {
	width: 4em;
}

#gallery td {
	width: 100px;
	text-align: center;
	padding-top: 25px;
}

#gallery tr:first-child td {
	padding-top: 0;
}

#gallery td {
	padding-left: 35px;
}

#gallery td:first-child {
	padding-left: 0px;
}

